--- a/InventoryManager/AppShell.xaml
+++ b/InventoryManager/AppShell.xaml
@@ -1,15 +1,108 @@
 <?xml version="1.0" encoding="UTF-8" ?>
+<!-- AppShell.xaml - Updated Navigation Structure with Inventory Management -->
+<!-- This version adds proper navigation to your inventory page and creates a tabbed interface -->
+<!-- Think of this as upgrading from a simple house to a multi-room facility with clear pathways -->
+
 <Shell
     x:Class="InventoryManager.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:InventoryManager"
-    Shell.FlyoutBehavior="Flyout"
-    Title="InventoryManager">
+    Title="InventoryManager"
+    FlyoutBehavior="Disabled">
 
+    <!-- Shell.Resources defines styles that apply to the entire navigation structure -->
+    <Shell.Resources>
+        <ResourceDictionary>
+            <!-- Define colors for consistent theming -->
+            <Color x:Key="Primary">DarkBlue</Color>
+            <Color x:Key="Secondary">LightBlue</Color>
+            <Color x:Key="Tertiary">White</Color>
+
+            <!-- Tab bar appearance styles -->
+            <!-- These styles make your navigation look professional and consistent -->
+            <Style x:Key="BaseStyle" TargetType="Element">
+                <Setter Property="Shell.BackgroundColor" Value="{StaticResource Primary}" />
+                <Setter Property="Shell.ForegroundColor" Value="{StaticResource Tertiary}" />
+                <Setter Property="Shell.TitleColor" Value="{StaticResource Tertiary}" />
+                <Setter Property="Shell.DisabledColor" Value="Gray" />
+                <Setter Property="Shell.UnselectedColor" Value="LightGray" />
+                <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource Primary}" />
+                <Setter Property="Shell.TabBarForegroundColor" Value="{StaticResource Tertiary}" />
+                <Setter Property="Shell.TabBarUnselectedColor" Value="LightGray" />
+            </Style>
+        </ResourceDictionary>
+    </Shell.Resources>
+
+    <!-- Login Route - This is the authentication page where users enter credentials -->
+    <!-- Route="login" means you can navigate here using //login -->
+    <!-- This page is isolated from the main app navigation since users aren't authenticated yet -->
     <ShellContent
-        Title="Home"
+        Title="Login"
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Route="login"
+        Shell.FlyoutBehavior="Disabled"
+        Shell.TabBarIsVisible="False" />
+
+    <!-- Main Application Tab Bar - This is where authenticated users spend their time -->
+    <!-- TabBar creates the bottom navigation that users see after logging in -->
+    <!-- Think of this as the main floor of your warehouse management system -->
+    <TabBar Route="main">
+
+        <!-- Dashboard Tab - Overview and summary information -->
+        <!-- This gives users a bird's eye view of their accessible inventory -->
+        <ShellContent
+            Title="Dashboard"
+            Icon="home.png"
+            ContentTemplate="{DataTemplate local:DashboardPage}"
+            Route="dashboard" />
+
+        <!-- Inventory Tab - The main inventory management interface -->
+        <!-- This is where users spend most of their time managing stock -->
+        <ShellContent
+            Title="Inventory"
+            Icon="inventory.png"
+            ContentTemplate="{DataTemplate local:InventoryPage}"
+            Route="inventory" />
+
+        <!-- Scanner Tab - For future barcode/QR code scanning functionality -->
+        <!-- We'll comment this out for now since you haven't built the scanner yet -->
+        <!--
+        <ShellContent
+            Title="Scanner"
+            Icon="scan.png"
+            ContentTemplate="{DataTemplate local:ScannerPage}"
+            Route="scanner" />
+        -->
+
+        <!-- Reports Tab - For future reporting and analytics -->
+        <!-- This will be useful later for generating inventory reports -->
+        <!--
+        <ShellContent
+            Title="Reports"
+            Icon="chart.png"
+            ContentTemplate="{DataTemplate local:ReportsPage}"
+            Route="reports" />
+        -->
+
+    </TabBar>
+
+    <!-- Additional Routes for Modal Pages and Deep Navigation -->
+    <!-- These are pages that can be navigated to programmatically but don't appear in tabs -->
+    <!-- Think of these as utility rooms that you access when needed but aren't part of the main flow -->
+
+    <!-- Future routes you might add:
+    <ShellContent
+        ContentTemplate="{DataTemplate local:ItemDetailsPage}"
+        Route="itemdetails" />
+    
+    <ShellContent
+        ContentTemplate="{DataTemplate local:EditItemPage}"
+        Route="edititem" />
+    
+    <ShellContent
+        ContentTemplate="{DataTemplate local:UserManagementPage}"
+        Route="usermanagement" />
+    -->
 
 </Shell>
