--- a/InventoryManager/DashboardPage.xaml
+++ b/InventoryManager/DashboardPage.xaml
@@ -118,6 +118,15 @@
                                 CornerRadius="5"
                                 HeightRequest="40" />
 
+                        <Button x:Name="ResetDbBtn" 
+                                Text="🔄 Reset DB" 
+                                Clicked="OnResetDbClicked"
+                                BackgroundColor="DarkRed"
+                                TextColor="White"
+                                CornerRadius="5"
+                                HeightRequest="40"
+                                Margin="0,5,0,0" />
+
                         <!-- Display list of all users in the system -->
                         <Label x:Name="UsersListLabel" 
                                Text=""
